Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58260

QQuickWebEngineView: drag 'n drop does not update the mouse cursor

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 1
    • 5.7.0, 5.8.0
    • WebEngine
    • None
    • 25555238cde42daf5a73669234e737c90ef9ea5f

    Description

      When dragging an item within a web page the mouse cursor is not updated.

      For example on http://gaearon.github.io/react-dnd/examples-chessboard-tutorial-app.html the mouse cursor should be Qt::ForbiddenCursor on forbidden chess board fields, but it always is Qt::DragMoveCursor.

      Even when QQuickWebEngineView::dragMoveEvent ignores the event properly (see https://codereview.qt-project.org/#/c/182641/1) the cursor is always Qt::DragMoveCursor.

      This is due to code in QQuickWindowPrivate::deliverDragEvent which creates a "translated" copy of the event object but ignores its accepted flag after being handled by QQuickItem::dragMoveEvent.

      Attachments

        For Gerrit Dashboard: QTBUG-58260
        # Subject Branch Project Status CR V

        Activity

          People

            jbornema Joerg Bornemann
            jbornema Joerg Bornemann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes